# pt-stats

./: .gitignore  README.md  pyproject.toml
.github/prompts/: commit.prompt.md
app/: add_free_torrents_to_qbit.py  app.py  settings.py  utils.py
src/pt_stats/db/: __init__.py  base.py  database.py
src/pt_stats/db/models/: __init__.py  core.py
src/pt_stats/pt_sites/: __init__.py  base.py  mteam.py  utils.py
src/pt_stats/settings/: __init__.py  core.py  utils.py
