[project]
authors = [{name = "GJCav", email = "micojcav@outlook.com"}]
dependencies = [
    "fastapi>=0.127.1,<1", 
    "httpx>=0.28.1,<1", 
    "peewee>=3.18.3,<4", 
    "qbittorrent-api>=2025.11.1,<2026", 
    "pydantic>=2.12.5,<3", 
    "marimo>=0.18.4,<1",
]
name = "pt-stats"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
pt_stats = { path = ".", editable = true }

[tool.pixi.tasks]
