[project]
authors = [{name = "GJCav", email = "micojcav@outlook.com"}]
dependencies = [
    "fastapi>=0.127.1,<1", 
    "httpx>=0.28.1,<1", 
    "peewee>=3.18.3,<4", 
    "types-peewee",
    "qbittorrent-api>=2025.11.1,<2026", 
    "pydantic>=2.12.5,<3", 
    "marimo>=0.18.4,<1", 
    "attrs>=25.4.0,<26", 
    "python-dotenv>=1.2.1,<2", 
    "furl>=2.1.4,<3", 
    "torf>=4.3.0,<5", 
    "ruamel-yaml>=0.18.17,<0.19",
    "cyclopts", 
    "humanize>=4.15.0,<5", 
    "rich>=14.2.0,<15", 
    "apscheduler>=3.11.2,<4", 
    "darkdetect>=0.8.0,<0.9", 
    "pendulum>=3.1.0,<4",
    "alpenstock>=1.2.0,<2",
]
name = "pt-stats"
requires-python = ">= 3.11"
version = "0.3.4"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
pt_stats = { path = ".", editable = true }

[tool.pixi.tasks]
